# ChemGraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.arm  LICENSE  README.md  TODO.md  aspirin_structure.xyz  config.toml  config_local.toml  docker-compose.yml  environment.yml  index.html  mcp_tools.py  methane_vibrational_frequencies_report.html  mkdocs.yml  mytodo.md  pyproject.toml  run_mcp.py  run_ui.py  vibrational_frequencies_report.html  water_molecule_optimization_report.html  water_molecule_report.html  water_optimization_report.html  water_report.html
.chainlit/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  code_quality.md  config.yml  development_environment.md  feature_request.md  testing_evaluation.md
.github/workflows/: ci.yml  conda-tests.yml  dependency_tests.yml  deploy-dev.yml  doc_ci.yml  ghcr-publish.yml  pypi-publish.yml  test-pypi-package.yml  tests.yml
.opencode/: opencode.example.jsonc
.opencode/plans/: refactoring-plan.md
acknowledgements/: index.html
cg_logs/session_2026-04-02_16-32-03_e217b1e4/: state_thread_1_2026-04-02_16-32-52.json
citation/: index.html
code_formatting_and_linting/: index.html
configuration_with_toml/: index.html
contributing/: index.html
docker_support/: index.html
docs/: acknowledgements.md  citation.md  code_formatting_and_linting.md  configuration_with_toml.md  contributing.md  docker_support.md  evaluation.md  example_usage.md  index.md  installation.md  license.md  mcp_servers.md  project_structure.md  pyscf_capability_checklist.md  running_local_models.md  streamlit_web_interface.md
evaluation/: index.html
evaluations/: test_run_cca.py
evaluations/data/: get_molecule_from_pubchempy.py  pubchempy_molecules_max30.json
evaluations/graspa/: test.py
evaluations/name_tasks/: eval.py  get_names_from_pubchempy.py  manual_workflow.py  query.py  run.py
evaluations/reactions/: manual_workflow.py  molecule_name_to_reaction_enthalpy.py  query.py  reactions_dataset.py  run.py  smiles_to_property.py
evaluations/smiles_tasks/: README.md  manual_workflow.py  query.py  run.py
example_usage/: index.html
examples/chemgraph_opencode/: README.md  opencode.jsonc  start_mcp_interactive.sh
examples/profiles/: aurora.template.json  crux.template.json  polaris.template.json
installation/: index.html
k8s/: DEPLOYMENT_GUIDE.md  README.md  deploy.sh  deployment.yaml  ingress.yaml  mcp-deployment.yaml  mcp-service.yaml  secrets.yaml.template  service.yaml
license/: index.html
mcp_servers/: index.html
notebooks/: 1_Demo_single_agent.ipynb  2_Demo-multi_agent.ipynb  3_Demo_using_MCP.ipynb  Demo-CompChemAgent.ipynb  Demo-Local_vLLM.ipynb  Demo-ManagerWorker_workflow.ipynb  Demo-MultiAgent.ipynb  Demo-PythonRelp.ipynb  Demo-SingleAgent.ipynb  Demo-multi_agent.ipynb  DemoOptVibWorkflow.ipynb  Demo_MCP.ipynb  Demo_MultiAgent.ipynb  Demo_infrared_spectrum.ipynb  Demo_rag_agent_Argo.ipynb  Demo_single_agent.ipynb  Demo_single_agent_UMA.ipynb  Demo_single_agent_report.ipynb  Legacy-CompChemAgent.ipynb  access_token.txt  carbon_dioxide_energy_report.html  carbon_dioxide_mace_mp_vibrational_frequencies.html  carbon_dioxide_vibrational_frequencies.html  co2_energy_report.html  co2_vibrational_frequencies.html  toluene.xyz
notebooks/vib/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0y-.json  cache.0z+.json  cache.0z-.json  cache.10x+.json  cache.10x-.json  cache.10y+.json  cache.10y-.json  cache.10z+.json  cache.10z-.json  cache.11x+.json  cache.11x-.json  cache.11y+.json  cache.11y-.json  cache.11z+.json  cache.11z-.json  cache.12x+.json  cache.12x-.json  cache.12y+.json  cache.12y-.json  cache.12z+.json  cache.12z-.json  cache.13x+.json  cache.13x-.json  cache.13y+.json  cache.13y-.json  cache.13z+.json  cache.13z-.json  cache.14x+.json  cache.14x-.json  cache.14y+.json  cache.14y-.json  cache.14z+.json  cache.14z-.json  cache.1x+.json  cache.1x-.json  (+53 more)
project_structure/: index.html
public/: mol_viewer_0cf562c6-299a-4497-aae1-77068ac997f8.html
running_local_models/: index.html
search/: search_index.json
streamlit_web_interface/: index.html
test/: sample.xyz  test.py  test_langgraph.py
tests/: conftest.py  pytest.ini  test_ASE_tools.py  test_academy_bootstrap.py  test_academy_campaign.py  test_academy_compute_launcher.py  test_academy_dashboard.py  test_academy_dashboard_launcher.py  test_academy_exchange_registration.py  test_academy_mcp_supervisor.py  test_academy_operator_console.py  test_academy_payloads.py  test_academy_reasoning_phase2.py  test_academy_remote_launcher.py  test_academy_sim_agent.py  test_academy_sim_bootstrap.py  test_academy_sim_boundaries.py  test_academy_sim_config.py  test_academy_sim_envelopes.py  test_academy_sim_peer_tools.py  test_academy_sim_registrations.py  test_agent_logging.py  test_agent_session.py  test_ase_input_path_resolution.py  test_calculators.py  test_cli_formatting.py  test_docking_tools.py  test_execution.py  test_faircalc.py  test_fairchem.py  test_graph_constructors.py  test_graphs.py  test_graspa_tools.py  test_human_interrupt.py  test_job_tracker.py  test_job_tracker_hardening.py  test_llm_agent.py  test_mace.py  test_mcp.py  test_memory.py  (+18 more)
ui/: app.py
windows_packaging/: .gitignore  README.md  RUNNING_ON_WINDOWS.md  STRUCTURE.md
~/: .pypirc
(+1088 files in other folders)
