[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "chemgraph"
version = "0.1.0"
description = "A computational chemistry agent for molecular simulation tasks."
authors = [
    { name = "Thang Pham", email = "tpham@anl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "ase",
    "rdkit",
    "langgraph>=0.3",
    "langchain-openai>=0.2.12",
    "langchain-ollama>=0.2.1",
    "langchain-anthropic>=0.3.13",
    "pydantic",
    "pandas",
    "mace-torch",
    "torch-dftd>=0.5.1",
    "pubchempy",
    "pyppeteer",
    "numpy>=2",
    "langchain-experimental>=0.3.4",
    "numexpr",
    "tblite>=0.4.0"
    ]

[project.urls]
"Homepage" = "https://example.com/your-project"
"Repository" = "https://github.com/Autonomous-Scientific-Agents/CompChemAgent/tree/main"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 88  # Match Black's default (adjust as needed)
target-version = "py311"  # Adjust based on your Python version
exclude = ["notebooks/"]  # Add files/folders to ignore

[tool.ruff.format]
quote-style = "preserve"  # Keep existing quote style
indent-style = "space"  # Use spaces for indentation
skip-magic-trailing-comma = false  # Ensure Black-style formatting

