[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemGraph"
version = "1.0.0"
description = "A computational chemistry agent for molecular simulation tasks."
authors = [
    { name = "Thang Pham", email = "tpham@anl.gov" },
    { name = "Murat Keçeli", email = "keceli@anl.gov" },
    { name = "Aditya Tanikanti", email = "atanikanti@anl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-ollama",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-experimental",
    "langchain-mcp-adapters",
    "langgraph-prebuilt",
    "pydantic",
    "pandas==2.2.3",
    "pubchempy",
    "pyppeteer==2.0.0",
    "numpy==2.2.6",
    "numexpr==2.11.0",
    "pytest",
    "deepdiff==8.5.0",
    "ase",
    "rdkit",
    "pymatgen",
    "mace-torch",
    "tblite==0.4.0",
    "globus_sdk",
    "streamlit==1.48.1",
    "stmol==0.0.9",
    "ipython-genutils==0.2.0",
    "langsmith==0.3.45",
    "rich==14.1.0",
    "toml==0.10.2",
    "mcp"
    ]

[project.optional-dependencies]
uma = [
    "fairchem-core==2.3.0",
    "e3nn>=0.5",
]
ui = [
    "streamlit",
    "stmol",
    "ipython-genutils",
]
parsl = [
    "parsl",
]

[project.urls]
"Homepage" = "https://github.com/argonne-lcf/ChemGraph"
"Repository" = "https://github.com/argonne-lcf/ChemGraph"

[project.scripts]
chemgraph = "ui.cli:main"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 88  # Match Black's default (adjust as needed)
target-version = "py310"  # Adjust based on your Python version
exclude = ["notebooks/"]  # Add files/folders to ignore

[tool.ruff.format]
quote-style = "preserve"  # Keep existing quote style
indent-style = "space"  # Use spaces for indentation
skip-magic-trailing-comma = false  # Ensure Black-style formatting

