[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "chemgraphagent"
version = "0.2.2"
description = "A computational chemistry agent for molecular simulation tasks."
authors = [
    { name = "Thang Pham", email = "tpham@anl.gov" },
    { name = "Murat Keçeli", email = "keceli@anl.gov" },
    { name = "Aditya Tanikanti", email = "atanikanti@anl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "langgraph==1.0.7",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
    "langchain-ollama==1.0.1",
    "langchain-anthropic==1.3.1",
    "langchain-google-genai==4.2.0",
    "langchain-groq==1.1.2",
    "langchain-experimental==0.4.1",
    "langchain-mcp-adapters==0.2.1",
    "langgraph-prebuilt==1.0.7",
    "pydantic",
    "pandas~=2.2.3",
    "pubchempy==1.0.5",
    "numpy==2.2.6",
    "numexpr==2.11.0",
    "pytest==8.4.1",
    "deepdiff==8.5.0",
    "ase>=3.26.0",
    "rdkit==2025.9.4",
    "pymatgen==2025.10.7",
    "mace-torch==0.3.14",
    "globus_sdk",
    "streamlit==1.48.1",
    "stmol==0.0.9",
    "ipython-genutils==0.2.0",
    "langsmith==0.3.45",
    "rich==14.1.0",
    "toml==0.10.2",
    "mcp==1.26.0",
    "fastmcp==2.14.5",
    "pytest-asyncio",
    ]

[project.optional-dependencies]
calculators = [
    "tblite==0.4.0",
]
uma = [
    "fairchem-core==2.13.0",
    "e3nn>=0.5",
]
ui = [
    "streamlit",
    "stmol",
    "ipython-genutils",
]
parsl = [
    "parsl",
]
viz = [
    "grandalf==0.8",
    "nest_asyncio",
]

[project.urls]
"Homepage" = "https://github.com/argonne-lcf/ChemGraph"
"Repository" = "https://github.com/argonne-lcf/ChemGraph"

[project.scripts]
chemgraph = "ui.cli:main"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 88  # Match Black's default (adjust as needed)
target-version = "py310"  # Adjust based on your Python version
exclude = ["notebooks/"]  # Add files/folders to ignore

[tool.ruff.format]
quote-style = "preserve"  # Keep existing quote style
indent-style = "space"  # Use spaces for indentation
skip-magic-trailing-comma = false  # Ensure Black-style formatting

